# lingmo-window

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: abi.yml  build.yml  package.yml  test.yml
cmake/: LingmoCompilerSettings.cmake  LingmoPCH.cmake  LingmoSanitizers.cmake  LingmoWindowConfig.cmake.in
debian/: changelog  control  copyright  liblingmowindow-dev.install  liblingmowindow1.install  qml6-module-lingmowindow.install  rules
examples/: CMakeLists.txt
examples/window-demo/: CMakeLists.txt  main.cpp  main.qml
include/LingmoWindow/: HeaderBar.h  LingmoWindow.h  LingmoWindowExport.h.in  LingmoWindowVersion.h.in  Types.h  Window.h  WindowChrome.h  WindowController.h  WindowEffect.h  WindowEffects.h  WindowHelper.h
qml/Lingmo/Window/: Dialog.qml  HeaderBar.qml  Window.qml  WindowEffect.qml  WindowEffects.qml  qmldir
rpm/: lingmo-window.spec
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  HeaderBar.cpp  Window.cpp  WindowChrome.cpp  WindowController.cpp  WindowEffect.cpp  WindowEffectManager.cpp  WindowEffects.cpp  WindowHelper.cpp  WindowManager.cpp
src/Core/private/: HeaderBar_p.h  WindowChrome_p.h  WindowController_p.h  WindowEffectManager_p.h  WindowEffect_p.h  WindowEffects_p.h  WindowManager_p.h  Window_p.h
src/QML/: CMakeLists.txt  LingmoWindowPlugin.cpp
src/platform/: CMakeLists.txt  WindowAdapter.cpp  WindowAdapter.h
src/platform/Generic/: CMakeLists.txt  GenericAdapter.cpp  GenericAdapter.h
src/platform/Wayland/: CMakeLists.txt  WaylandAdapter.cpp  WaylandAdapter.h
src/platform/X11/: CMakeLists.txt  X11Adapter.cpp  X11Adapter.h
tests/: CMakeLists.txt  tst_Architecture.cpp  tst_HeaderBar.cpp  tst_QmlImport.cpp  tst_QmlImport.qml  tst_Window.cpp  tst_WindowAdapter.cpp  tst_WindowChrome.cpp  tst_WindowController.cpp
